syntax = "proto3";

package user_v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option go_package = "github.com/vashkevichjr/auth/api/user_v1;user_v1";

service UserService {
    rpc createUser(CreateUserRequest) returns (CreateUserResponse);
    rpc getUser(GetUserRequest) returns (GetUserResponse);
    rpc updateUser(UpdateUserRequest) returns (google.protobuf.Empty);
    rpc deleteUser(DeleteUserRequest) returns (google.protobuf.Empty);
}

message CreateUserRequest {
    string name = 1;
    string email = 2;
    string password = 3;
    string password_confirm = 4;
    Role role = 5;
}

enum Role {
    ROLE_USER = 0;
    ROLE_ADMIN = 1;
}

message CreateUserResponse {
    int64 id = 1;
}

message GetUserRequest {
    int64 id = 1;
}

message GetUserResponse {
    int64 id = 1;
    string name = 2;
    string email = 3;
    Role role = 4;
    google.protobuf.Timestamp created_at = 5;
    google.protobuf.Timestamp updated_at = 6;
}

message UpdateUserRequest {
    int64 id = 1;
    google.protobuf.StringValue name = 2;
    google.protobuf.StringValue email = 3;
}

message DeleteUserRequest {
    int64 id = 1;
}
